--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
-
 {
   "redirects": [
     {
@@ -11,6 +10,12 @@
         }
       ],
       "statusCode": 308
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
